[gd_scene load_steps=7 format=3 uid="uid://du1qq3tmfxss7"]

[ext_resource type="Script" path="res://scripts/ExitHouse.gd" id="1_6po8i"]
[ext_resource type="Script" uid="uid://blnpkalalldos" path="res://scripts/HouseInteriorController.gd" id="1_controller"]
[ext_resource type="PackedScene" uid="uid://cu4vgvuaexi2s" path="res://scenes/player.tscn" id="1_house"]
[ext_resource type="Script" path="res://scripts/map_opener.gd" id="4_map_opener"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_floor"]
size = Vector2(2000, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_exit"]
size = Vector2(300, 200)

[node name="HouseInterior" type="Node2D"]
script = ExtResource("1_controller")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="Background" type="ColorRect" parent="."]
z_index = -10
offset_left = -500.0
offset_top = -200.0
offset_right = 1652.0
offset_bottom = 848.0
color = Color(0.6, 0.4, 0.3, 1)

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(576, 700)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource("RectangleShape2D_floor")

[node name="ColorRect" type="ColorRect" parent="Floor"]
z_index = -5
offset_left = -1000.0
offset_top = -50.0
offset_right = 1000.0
offset_bottom = 50.0
color = Color(0.4, 0.25, 0.15, 1)

[node name="ExitArea" type="Area2D" parent="."]
position = Vector2(576, 600)
script = ExtResource("1_6po8i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
shape = SubResource("RectangleShape2D_exit")

[node name="Label" type="Label" parent="ExitArea"]
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 5.0
text = "Press E to Exit House"
horizontal_alignment = 1

[node name="Player" parent="." instance=ExtResource("1_house")]
position = Vector2(576, 550)

[node name="WelcomeLabel" type="Label" parent="."]
offset_left = 376.0
offset_top = 150.0
offset_right = 776.0
offset_bottom = 220.0
theme_override_font_sizes/font_size = 32
text = "Inside Moomin House"
horizontal_alignment = 1

[node name="MapOpener" type="Node" parent="."]
script = ExtResource("4_map_opener")

[connection signal="body_entered" from="ExitArea" to="ExitArea" method="_on_body_entered"]
[connection signal="body_exited" from="ExitArea" to="ExitArea" method="_on_body_exited"]
